mobile-friendly size

--- a/index_en.html
+++ b/index_en.html
@@ -3,6 +3,7 @@
 <head>
   <title>TrUFOrfalse</title>
   <link href="public/index.css" rel="stylesheet"/>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 </head>
 <body>
 <h1>{{it.title}}</h1>
