--- a/index.html
+++ b/index.html
@@ -17,12 +17,7 @@
   <p class="description"></p>
   <div class="image"><img alt="Illustration" src=""/></div>
   <button class="pick" onclick="vraiUFO.pick()">Un autre ↺</button>
-  <div class="options">
-    <button class="true" onclick="vraiUFO.answer(true)">Vrai <span class="ufo">ovni</span></button>
-    ou
-    <button class="false" onclick="vraiUFO.answer(false)">Faux <span class="ufo">ovni</span></button>
-    ?
-  </div>
+  <div class="options"></div>
   <p class="score"></p>
 </div>
 </body>
