--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <h2 class="name"></h2>
   <p class="description"></p>
   <div class="image"><img alt="Illustration" src=""/></div>
-  <button class="pick" onclick="vraiUFO.pick()">Un autre ↺</button>
+  <button class="pick" onclick="vraiUFO.pick()"></button>
   <div class="options"></div>
   <p class="score"></p>
 </div>
