--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </body>
 <script type="module">
   let lang = navigator.language.substring(0, 2)
-  if (!["fr", "en", "it", "sv"].includes(lang)) {
+  if (!["fr", "en", "it", "sv", "es"].includes(lang)) {
     lang = "en"
   }
   import {VraiUfo} from "./VraiUfo.mjs"
