--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </body>
 <script type="module">
   let lang = navigator.language.substring(0, 2)
-  if (!["de", "en", "es", "fr", "it", "pt", "sv"].includes(lang)) {
+  if (!["de", "en", "es", "fr", "it", "no", "pt", "sv"].includes(lang)) {
     lang = "en"
   }
   import {VraiUfo} from "./VraiUfo.mjs"
